tests/ui/issues/issue-53251.stderr
error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-53251.rs:11:20
   |
LL | / macro_rules! impl_add {
LL | |     ($($n:ident)*) => {
LL | |         $(
LL | |             fn $n() {
LL | |                 S::f::<i64>();
   | |                    ^------- help: remove these generics
   | |                    |
   | |                    expected 0 generic arguments
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `impl_add!`
LL |
LL |   impl_add!(a b);
   |   -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-53251.rs:4:8
   |
LL |     fn f() {}
   |        ^

error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-53251.rs:11:20
   |
LL | / macro_rules! impl_add {
LL | |     ($($n:ident)*) => {
LL | |         $(
LL | |             fn $n() {
LL | |                 S::f::<i64>();
   | |                    ^------- help: remove these generics
   | |                    |
   | |                    expected 0 generic arguments
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `impl_add!`
LL |
LL |   impl_add!(a b);
   |   -------------- in this macro invocation
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-53251.rs:4:8
   |
LL |     fn f() {}
   |        ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
